--- a/WEB303As06/css/style.css
+++ b/WEB303As06/css/style.css
@@ -1,4 +1,159 @@
-html, body{
-    margin: 0;
-    padding: 0;
+/*
+    Chantal Monette W0800871
+    Assignment 6 - Elizabeth Jennings
+    20221103
+    WEB303 - JS2
+
+COLOUR GUIDE:
+************* 
+
+
+TYPOGRAPHY:
+*************
+
+Images used:
+*************
+    
+*/
+
+
+/*
+0. CSS Reset
+0.5Typography
+
+
+ . Tabbed Section
+
+*/
+@charset "utf-8";
+
+/*
+0. CSS Reset
+   http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*
+ 0.5 Typography
+*/
+
+
+/*
+ 1. General Body
+*/
+body {
+    background: #E2DCDE;
+}
+
+
+/*
+ ?. Tabbed Section
+*/
+
+.tabbed {
+    background-color: white;
+    border-radius: 25px;
+    margin: 20px;
+    padding: 20px;
+    position: relative;
+}
+
+.tabbedmenu {
+    width: 35%;
+    box-sizing: border-box;
+    display: inline-block;
+    min-height: 1px;
+    vertical-align: top;
+}
+
+.tabbed ul {
+    width: 60%;
+    box-sizing: border-box;
+    display: inline-block;
+    min-height: 1px;
+    vertical-align: top;
+    padding-left: 5%;
+}
+
+
+.tabbedmenu div {
+    padding: 15px 20px 15px 40px;
+    margin-bottom: 10px;
+    color: #E63746;
+    background: #5B0B12;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    position: relative;
+    vertical-align: middle;
+    font-weight: 700;
+    transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.tabbedmenu div.active {
+    background-color: #E2DCDE;
+    color: #5B0B12;
+}
+
+.tabbed ul li {
+    opacity: 0;
+    position: absolute;
+    list-style: none;
+    transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.tabbed ul li.active {
+    transition-delay: .3s;
+    z-index: 2;
+    opacity: 1;
+}
+
+
+
+
+
+
