--- a/WEB303As06/css/style.css
+++ b/WEB303As06/css/style.css
@@ -10,6 +10,7 @@ COLOUR GUIDE:
 
 TYPOGRAPHY:
 *************
+https://fonts.google.com/specimen/Russo+One
 
 Images used:
 *************
@@ -82,12 +83,12 @@ table {
  0.5 Typography
 */
 
-
 /*
  1. General Body
 */
 body {
     background: #E2DCDE;
+    margin: 0 auto;
 }
 
 
@@ -100,7 +101,31 @@ body {
     border-radius: 25px;
     margin: 20px;
     padding: 20px;
+    width: 900px;
+    height: max-content;
     position: relative;
+    font-weight: 400;
+}
+
+.classified {
+    background-color: #bbb5b7;
+    border-radius: 25px;
+    cursor: pointer;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 9;
+}
+
+.classified h1 {
+    font-family: 'Russo One', sans-serif;
+    font-size: 72px;
+    margin-top: 20%;
+    color: #5B0B12;
+    transform: rotate(325deg);
+    text-align: center;
 }
 
 .tabbedmenu {
@@ -120,23 +145,26 @@ body {
     padding-left: 5%;
 }
 
-
 .tabbedmenu div {
+    font-family: 'Russo One', sans-serif;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+
     padding: 15px 20px 15px 40px;
-    margin-bottom: 10px;
-    color: #E63746;
+    margin-bottom: 7.5px;
+    color: #e67d86;
     background: #5B0B12;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     cursor: pointer;
     position: relative;
     vertical-align: middle;
-    font-weight: 700;
     transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .tabbedmenu div.active {
     background-color: #E2DCDE;
     color: #5B0B12;
+    border-left: 5px solid #5B0B12;
+    padding-left: 15px;
 }
 
 .tabbed ul li {
@@ -150,6 +178,38 @@ body {
     transition-delay: .3s;
     z-index: 2;
     opacity: 1;
+}
+
+.tab-item img {
+    position: relative;
+    width: 90%;
+    padding: 2.5%;
+}
+
+.purpose {
+    font-family: 'Russo One', sans-serif;
+    padding: 10px  20px 10px ;
+    margin: 10px 0;
+    width: 90%;
+    border-radius: 25px;
+    background-color: #E2DCDE;
+    color: #5B0B12;
+    position: relative;
+    vertical-align: middle;
+    font-weight: 700;
+}
+
+.pinfo {
+    font-family: 'Russo One', sans-serif;
+    padding: 10px 20px 10px;
+    margin: 10px 20px;
+    width: 80%;
+    border-radius: 25px;
+    background-color: #E2DCDE;
+    color: #5B0B12;
+    position: relative;
+    vertical-align: middle;
+    font-weight: 700;
 }
 
 
