--- a/WEB303As06/css/style.css
+++ b/WEB303As06/css/style.css
@@ -6,7 +6,9 @@
 
 COLOUR GUIDE:
 ************* 
-
+#E63746 - Imperial Red
+#E2DcDE - Gainsboro
+    Or shades thereof.
 
 TYPOGRAPHY:
 *************
@@ -14,17 +16,20 @@ https://fonts.google.com/specimen/Russo+One
 
 Images used:
 *************
+https://www.hollywoodreporter.com/wp-content/uploads/2013/01/americans_a.jpg?w=1024
+    Header Image capped from opening credits of show. 
+https://pixabay.com/photos/paper-structure-fund-design-paper-186899/
+        Pixabay License
+            Free for Commercial Use, No Attribution Required
     
 */
 
 
 /*
 0. CSS Reset
-0.5Typography
-
-
- . Tabbed Section
-
+1. Header
+2. Accordion
+3. Tabbed Section
 */
 @charset "utf-8";
 
@@ -80,15 +85,13 @@ table {
 }
 
 /*
- 0.5 Typography
-*/
-
-/*
  1. General Body
 */
 body {
     background: #E2DCDE;
-    margin: 0 auto;
+    background: url(../images/background.jpg) no-repeat center center fixed;
+    padding: 5%;
+    margin: auto;
     justify-content: center;
     align-items: center;
 }
@@ -97,60 +100,98 @@ body {
  2. Header
 */
 
-.glitch {
+header {
     display: block;
-    margin: 0 auto;
+    background: url(../images/header000.jpg);
+    width: 648px;
+    height: 286px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.glitch {
+    position: relative;
+    height: 286px;
     font-family: 'Russo One', sans-serif;
     font-size: 4vh;
+    line-height: 286px;
+    vertical-align: center;
+    padding-left: 43%;
+}
+
+.glitch:hover {
+    animation: blink 1s infinite linear alternate;
+}
+
+@keyframes blink {
+    60%, 70%, 79% {
+        opacity: 1;
+    }
+    65%, 67%, 76%, 78%{
+        opacity: 0.2;
+    }
+    66%, 79%, 77% {
+        opacity: 0.8;
+    }
+}
+
+/*
+ 2. Accordions 
+*/
+
+.accordion {
+    display: flex;
+    margin: 20px;
+    padding: 20px;
+    width: 900px;
+    height: 305px;;
+    position: relative;
+    font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.accordionElizabeth {
+    margin-right: 25px;
+}
+
+.accordionElizabeth, .accordionNadezhda {
+    flex: 60%;
+    background-color: white;
+    border-radius: 25px;
+    width: 450px;
+    position: relative;
+    font-weight: 400;
+
+}
+
+.accordion h1 {
+    font-family: 'Russo One', sans-serif;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    padding: 15px 20px 15px 40px;
+    color: #e67d86;
+    background: #5B0B12;
+    cursor: pointer;
+    transition: 1s all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.accordion div {
+    padding: 20px;
+    display: none;
 }
 
 
-.glitch {
-    font-size: 100px;
-    text-transform: uppercase;
-    color: #fcf7fa;
-    position: relative;
-    margin: 0 auto;
-    width: 100%;
-    height: 50%;
-  }
-  
-  .glitch:before, .glitch:after {
-    content: 'Przemysław';
-    position: absolute;
-    width: 100%;
-    overflow: hidden;
-    color: #fcf7fa;
-    background: $color;
-    text-align: center;
-  }
-  
-  .glitch:before {
-    left: -2px;
-    text-shadow: 2px 0 #00ffea;
-    clip:rect(0,900px,0,0);
-    animation: glitch 3s infinite linear;
-  }
-  
-  .glitch:after {
-    left: 2px;
-    text-shadow: -1px 0 #e23d1f;
-    clip:rect(0,900px,0,0);
-    animation: glitch 2s infinite linear;
-  }
-  
+.accordion h1.active {
+    background-color: #b6b0b2;
+    color: #5B0B12;
+    border-left: 5px solid #5B0B12;
+    padding-left: 15px;
+}
 
-/* Glitch animation keyframe by https://codepen.io/captain_anonym0us/pen/oGBYZO */
-@keyframes glitch{
-    @for $i from 0 through 30{
-      #{percentage($i*(1/30))}{
-        clip:rect(random(100)+px,9999px,random(100)+px,0);
-      }
-    }
-  }
 
 /*
- ?. Tabbed Section
+ 3. Tabbed Section
 */
 
 .tabbed {
@@ -162,6 +203,8 @@ body {
     height: max-content;
     position: relative;
     font-weight: 400;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .classified {
