--- a/WEB303As07/css/photoViewer.css
+++ b/WEB303As07/css/photoViewer.css
@@ -1,34 +1,65 @@
+html {
+  background: url(../img/background.jpg) no-repeat center center fixed;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  font-family: sans-serif;
+  font-size: 12pt;
+  color: #292215;
+}
+
+body {
+  background: #F1EDE5;
+  padding: 50px 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  align-self: auto;
+  border-top: 15px solid #C5D6CE;
+}
+
 #photo-viewer {
   display: none;
+  margin: 0 auto;
 }
+
 #photo-viewer .photo-box {
   position: relative;
   display: block;
   width: 800px;
   height: 450px;
+  border: 3px solid #436d8a;
 }
+
 #photo-viewer .photo-box.is-loading::after {
   content: "Loading...";
   position: absolute;
-  z-index: 10;
+  z-index: 0;
   color: #000;
   top: calc(50% - 20px);
   left: calc(50% - 50px);
 }
+
 #photo-viewer .photo-box img {
   position: absolute;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 800px;
   top: 50%;
   left: 50%;
 }
-#photo-viewer .thumbnail-anchor img {
-  width: 80px;
-  height: 45px;
-  margin: 10px;
+
+.photo-thumbnails {
+  display: block;
+  background: #C5D6CE;
+  width: 663px;
+  padding-left: 143px;
 }
-#photo-viewer .thumbnail-anchor img.active {
-  border: 3px solid rgb(67, 109, 138);
+
+#photo-viewer .thumbnail-anchor img {
+  width: 10%;
+  margin: 10px;
+  border: 3px solid #C5D6CE;
+}
+#photo-viewer a.active img {
+  border: 3px solid #436d8a;
   opacity: .3;
 }
 
