--- a/WEB303As07/css/photoViewer.css
+++ b/WEB303As07/css/photoViewer.css
@@ -3,18 +3,18 @@ html {
   display: grid;
   align-items: center;
   justify-items: center;
-  font-family: sans-serif;
   font-size: 12pt;
   color: #292215;
 }
 
 body {
-  background: #F1EDE5;
+  background: #E3D9D7;
   padding: 50px 100px;
   margin-top: 50px;
   margin-bottom: 50px;
   align-self: auto;
-  border-top: 15px solid #C5D6CE;
+  border-top: 15px solid #BAB7C0;
+  font-family: 'Spartan', sans-serif;
 }
 
 #photo-viewer {
@@ -27,7 +27,7 @@ body {
   display: block;
   width: 800px;
   height: 450px;
-  border: 3px solid #436d8a;
+  border: 3px solid #595562;
 }
 
 #photo-viewer .photo-box.is-loading::after {
@@ -48,7 +48,7 @@ body {
 
 .photo-thumbnails {
   display: block;
-  background: #C5D6CE;
+  background: #BAB7C0;
   width: 663px;
   padding-left: 143px;
 }
@@ -56,14 +56,10 @@ body {
 #photo-viewer .thumbnail-anchor img {
   width: 10%;
   margin: 10px;
-  border: 3px solid #C5D6CE;
+  border: 3px solid #BAB7C0;
 }
 #photo-viewer a.active img {
-  border: 3px solid #436d8a;
+  border: 3px solid #817C8D;
   opacity: .3;
 }
 
-.photo-frame img {
-  border: 1px solid black;
-
-}
