--- a/WEB303As09/css/style.css
+++ b/WEB303As09/css/style.css
@@ -1,3 +1,30 @@
 .active {
     background-color: aquamarine;
 }
+
+.sortable {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
+}
+
+.sortable thead tr {
+    background-color:  #345362;
+    border: 1px solid #ddd;
+    padding: .35em;
+    text-align: center;
+}
+
+th {
+    text-transform: uppercase;
+}
+
+.sortable tbody tr {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    padding: .35em;
+    text-align: center;
+}
